Refactor to use require.js.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Canvas Test</title>
+	<style>
+	    body {
+	        font-family: sans-serif;
+	        font-size: 10pt;
+	    }
+	</style>
+	<script data-main="main" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.5/require.js"></script>
 </head>
 <body>
     <canvas id="canvasOne" width="500" height="300">Your browser does not support HTML5 Canvas.</canvas>
+<!-- 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-    <script src="main.js"></script>
+ -->
+<!--     <script src="main.js"></script> -->
+    <p>Inspired by <a href='http://jeremykun.com/2013/05/11/bezier-curves-and-picasso/'>Bezier Curves and Picasso</a>. Source code on <a href='https://github.com/liyanage/canvas-playground'>GitHub</a>.</p>
+    <div id='debugDiv'></div>
 </body>
 </html>
